[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.isort]
atomic = true
profile = "black"
line_length = 120
skip_gitignore = true
src_paths = ["src", "tests", "scripts", "examples", "demo", "docs", "setup.py"]

[tool.black]
line-length = 120
include = '\.pyi?$'